--- a/common/sysctl.conf
+++ b/common/sysctl.conf
@@ -1,6 +1,29 @@
+#
+# nginx related tweaks
+# https://www.linode.com/docs/web-servers/nginx/configure-nginx-for-optimized-performance
+
 net.core.somaxconn = 65536
 net.ipv4.tcp_max_tw_buckets = 1440000
 net.ipv4.ip_local_port_range = 1024 65000
 net.ipv4.tcp_fin_timeout = 15
 net.ipv4.tcp_window_scaling = 1
 net.ipv4.tcp_max_syn_backlog = 3240000
+
+#
+# rTorrent related tweaks
+# https://github.com/rakshasa/rtorrent/wiki/Performance-Tuning#networking-tweaks
+
+# Maximum Socket Receive Buffer. 16MB per socket - which sounds like a lot, but will virtually never consume that much. Default: 212992
+net.core.rmem_max = 16777216
+# Maximum Socket Send Buffer. 16MB per socket - which sounds like a lot, but will virtually never consume that much. Default: 212992
+net.core.wmem_max = 16777216
+# Increase the write-buffer-space allocatable: min 4KB, def 12MB, max 16MB. Default: 4096 16384 4194304
+net.ipv4.tcp_wmem = 4096 12582912 16777216
+# Increase the read-buffer-space allocatable: min 4KB, def 12MB, max 16MB. Default: 4096 16384 4194304
+net.ipv4.tcp_rmem = 4096 12582912 16777216
+# Tells the system whether it should start at the default window size only for new TCP connections or also for existing TCP connections that have been idle for too long. Default: 1
+net.ipv4.tcp_slow_start_after_idle = 0
+# Allow reuse of sockets in TIME_WAIT state for new connections only when it is safe from the network stack’s perspective. Default: 0
+net.ipv4.tcp_tw_reuse = 1
+# Do not last the complete time_wait cycle. Default: 0
+net.ipv4.tcp_tw_recycle = 1
